# kursovaya_gotovaya

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  init.sql
include/: Achievement.h  Card.h  ContactForm.h  Database.h  EmailSender.h  Game.h  Player.h  UserManager.h
include/Audio/: MusicPlayer.h  SoundManager.h
include/GUI/: Button.h  CardSprite.h  Menu.h
music/: README.md
sounds/: INSTRUCTIONS.txt  README.md
src/: Game.cpp  Player.cpp
